fix(survey): food list names wrapping

--- a/apps/survey/src/scss/app.scss
+++ b/apps/survey/src/scss/app.scss
@@ -36,6 +36,12 @@
     border: 2px solid map-get($blue, "darken-3") !important;
 }
 
+.list__no-wrap {
+    .v-list-item__title {
+        white-space: initial !important;
+    }
+}
+
 .list-item-border {
     border-bottom: 1px solid map-get($grey, "lighten-3");
 }
